[gd_scene load_steps=3 format=3 uid="uid://ca48lxdxhqr2f"]

[ext_resource type="Script" path="res://ui/inventory_screen.gd" id="1_inventory"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.4, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="InventoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_inventory")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -280.0
offset_right = 340.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "◆ INVENTORY ◆"
horizontal_alignment = 1

[node name="HeaderPanel" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WeightLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HeaderPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Weight: 0.0 / 45.0 kg"

[node name="EncumbranceLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HeaderPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Status: Normal"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ContentContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="EquipmentPanel" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 2

[node name="EquipmentTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/EquipmentPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 15
text = "══ EQUIPMENT ══"
horizontal_alignment = 1

[node name="EquipmentList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/EquipmentPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="InventoryPanel" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="InventoryTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/InventoryPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 15
text = "══ BACKPACK ══"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/InventoryPanel"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="InventoryList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/InventoryPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TooltipPanel" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="TooltipMargin" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TooltipPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="TooltipLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/TooltipPanel/TooltipMargin"]
layout_mode = 2
theme_override_colors/default_color = Color(0.85, 0.85, 0.85, 1)
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "Select an item to see details"
fit_content = true
scroll_active = false

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ActionPanel" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 24

[node name="UseLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ActionPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "[U] Use"

[node name="EquipLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ActionPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "[E] Equip"

[node name="DropLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ActionPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "[D] Drop"

[node name="TabLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ActionPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 13
text = "[Tab] Switch"

[node name="CloseLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ActionPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "[Esc] Close"
